--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/utkarshutt2706/kisan-sewa-backend#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.5.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "winston": "^3.2.1"
   }
 }
