--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
     "nodemon": "^2.0.2",
+    "oauth": "^0.9.15",
     "winston": "^3.2.1"
   }
 }
